# bidon-solana

./: .gitignore  LICENSE  PLAN.md  PRODUCT_AND_FRONTEND.md  README.md  SECURITY.md  SOLANA_PLAN.md
bidon-zk/: AUDIT.md  Anchor.toml  Cargo.toml
bidon-zk/client/: .gitignore  e2e.mjs  keeper.mjs  kora-client.mjs  kora-poc.mjs  lib.mjs  light.mjs  load-env.mjs  package-lock.json  package.json  probe-photon.mjs  tg.mjs
bidon-zk/kora/: Dockerfile  kora.toml  signers.toml
bidon-zk/programs/bidon-zk/: Cargo.toml
bidon-zk/programs/bidon-zk/src/: lib.rs
bidon-zk/programs/bidon-zk/tests/: audit_fixes.rs  bid.rs  cancel.rs  claim.rs  close.rs  combined.rs  deposit.rs  foundation.rs  place_bid.rs  proposal.rs  raise_bid.rs  winner_count.rs  withdraw.rs
bidon-zk/programs/bidon-zk/tests/common/: mod.rs
e2e/: README.md  check.mjs  devnet-all.mjs  e2e.mjs  package-lock.json  package.json
