[package]
name = "bidon-zk"
version = "0.1.0"
description = "bidon parimutuel auctions on ZK Compression"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "bidon_zk"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
light-hasher = "5.0.0"
light-sdk = { version = "0.23.0", features = ["anchor", "cpi-context"] }

[dev-dependencies]
anchor-spl = "0.31.1"
light-client = "0.23.0"
solana-keypair = "2.2"
solana-message = "2.2"
solana-pubkey = { version = "2.4", features = ["curve25519", "sha2"] }
solana-signer = "2.2"
solana-transaction = "2.2"

light-program-test = "0.23.0"
tokio = "1.49.0"
solana-sdk = "2.2"
blake3 = "=1.8.2"
